# backend/src/auth/auth.controller.ts
@@ -9,6 +9,7 @@ import {
 import { AuthGuard } from "@nestjs/passport";
 import { AuthService } from "./auth.service";
 import { CreateUserDto } from "../users/dto/create-user.dto";
+import { LoginDto } from "./dto/login.dto";
 
 @Controller("auth")
 export class AuthController {
@@ -22,7 +23,7 @@ export class AuthController {
 	// passport-local戦略を付与する
 	@UseGuards(AuthGuard("local"))
 	@Post("login")
-	async login(@Request() req: { user: { id: number } }) {
+	async login(@Request() req: { user: { id: number } }, @Body() _: LoginDto) {
 		// LocalStrategy.validate()で認証して返した値がreq.userに入ってる
 		const user = req.user;
 
